{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 291,
  "lineage": "56e5784c-bced-e8a1-ad6c-cd94d045f598",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendAddressPools/defaultaddresspool",
                "ip_addresses": [],
                "name": "defaultaddresspool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendAddressPools/pool-test-apps-nginx-demo-80-bp-8080",
                "ip_addresses": [
                  "10.52.0.15",
                  "10.52.0.34"
                ],
                "name": "pool-test-apps-nginx-demo-80-bp-8080"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendHttpSettingsCollection/bp-test-apps-nginx-demo-80-8080-test-app",
                "name": "bp-test-apps-nginx-demo-80-8080-test-app",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 8080,
                "probe_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/probes/pb-test-apps-nginx-demo-80-test-app",
                "probe_name": "pb-test-apps-nginx-demo-80-test-app",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendHttpSettingsCollection/defaulthttpsetting",
                "name": "defaulthttpsetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/probes/defaultprobe-Http",
                "probe_name": "defaultprobe-Http",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/frontendIPConfigurations/appGwPublicFrontendIp",
                "name": "appGwPublicFrontendIp",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/publicIPAddresses/3a094e6cbaae6246-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/frontendPorts/port_80",
                "name": "port_80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/gatewayIPConfigurations/appGatewayIpConfig",
                "name": "appGatewayIpConfig",
                "subnet_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn/subnets/3a094e6cbaae6246-appgw-sn"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/frontendIPConfigurations/appGwPublicFrontendIp",
                "frontend_ip_configuration_name": "appGwPublicFrontendIp",
                "frontend_port_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/frontendPorts/port_80",
                "frontend_port_name": "port_80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/httpListeners/fl-452c578b4f742bd7a3927c3caf2b604e",
                "name": "fl-452c578b4f742bd7a3927c3caf2b604e",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw",
            "identity": [],
            "location": "eastus",
            "name": "3a094e6cbaae6246-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "localhost",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/probes/defaultprobe-Http",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "defaultprobe-Http",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "localhost",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/probes/pb-test-apps-nginx-demo-80-test-app",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "pb-test-apps-nginx-demo-80-test-app",
                "path": "/nginx/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/httpListeners/fl-452c578b4f742bd7a3927c3caf2b604e",
                "http_listener_name": "fl-452c578b4f742bd7a3927c3caf2b604e",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/requestRoutingRules/rr-452c578b4f742bd7a3927c3caf2b604e",
                "name": "rr-452c578b4f742bd7a3927c3caf2b604e",
                "priority": 19500,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/urlPathMaps/url-452c578b4f742bd7a3927c3caf2b604e",
                "url_path_map_name": "url-452c578b4f742bd7a3927c3caf2b604e"
              }
            ],
            "resource_group_name": "tfm-brayanto",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendAddressPools/defaultaddresspool",
                "default_backend_address_pool_name": "defaultaddresspool",
                "default_backend_http_settings_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendHttpSettingsCollection/defaulthttpsetting",
                "default_backend_http_settings_name": "defaulthttpsetting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/urlPathMaps/url-452c578b4f742bd7a3927c3caf2b604e",
                "name": "url-452c578b4f742bd7a3927c3caf2b604e",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendAddressPools/pool-test-apps-nginx-demo-80-bp-8080",
                    "backend_address_pool_name": "pool-test-apps-nginx-demo-80-bp-8080",
                    "backend_http_settings_id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/backendHttpSettingsCollection/bp-test-apps-nginx-demo-80-8080-test-app",
                    "backend_http_settings_name": "bp-test-apps-nginx-demo-80-8080-test-app",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/applicationGateways/3a094e6cbaae6246-appgw/urlPathMaps/url-452c578b4f742bd7a3927c3caf2b604e/pathRules/pr-test-apps-test-app-rule-0-path-0",
                    "name": "pr-test-apps-test-app-rule-0-path-0",
                    "paths": [
                      "/nginx/"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.app_gateway_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_gateway_subnet",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "appgw-3a094e6cbaae6246",
            "fqdn": "appgw-3a094e6cbaae6246.eastus.cloudapp.azure.com",
            "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/publicIPAddresses/3a094e6cbaae6246-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.203.128.167",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "3a094e6cbaae6246-appgw-pip",
            "resource_group_name": "tfm-brayanto",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.52.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn/subnets/3a094e6cbaae6246-sn",
            "name": "3a094e6cbaae6246-sn",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tfm-brayanto",
            "virtual_network_name": "3a094e6cbaae6246-vn"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.aks_vnet",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.52.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn/subnets/3a094e6cbaae6246-appgw-sn",
            "name": "3a094e6cbaae6246-appgw-sn",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tfm-brayanto",
            "virtual_network_name": "3a094e6cbaae6246-vn"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.aks_vnet",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.52.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "47748bf6-cb83-4c3f-b333-7597a0f21759",
            "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn",
            "location": "eastus",
            "name": "3a094e6cbaae6246-vn",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "tfm-brayanto",
            "subnet": [
              {
                "address_prefixes": [
                  "10.52.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn/subnets/3a094e6cbaae6246-sn",
                "name": "3a094e6cbaae6246-sn",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.52.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/5d43fdfa-fcba-4fe1-8ee2-2a503c338062/resourceGroups/tfm-brayanto/providers/Microsoft.Network/virtualNetworks/3a094e6cbaae6246-vn/subnets/3a094e6cbaae6246-appgw-sn",
                "name": "3a094e6cbaae6246-appgw-sn",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "test_ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "test-apps/test-app",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "azure/application-gateway"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "test-app",
                "namespace": "test-apps",
                "resource_version": "45633",
                "uid": "bef185b6-8ae0-42a7-9aca-724422a3f66c"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "nginx-demo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/nginx/*",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.203.128.167"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_application_gateway.app_gateway",
            "azurerm_public_ip.app_gateway_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.aks_subnet",
            "azurerm_subnet.app_gateway_subnet",
            "module.aks.azurerm_kubernetes_cluster.this",
            "module.aks.azurerm_role_assignment.agic_app_gateway_contributor",
            "module.aks.azurerm_role_assignment.agic_network_contributor",
            "module.aks.azurerm_role_assignment.agic_resource_group_reader",
            "module.aks.data.azurerm_client_config.current",
            "random_id.prefix"
          ]
        }
      ]
    },
    {
      "module": "module.airflow",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "airflow",
            "metadata": [
              {
                "generation": 0,
                "name": "airflow",
                "resource_version": "40511",
                "uid": "f4faf34c-896d-45db-a59a-46b73bfd901b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "azurerm_application_gateway.app_gateway",
            "azurerm_public_ip.app_gateway_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.aks_subnet",
            "azurerm_subnet.app_gateway_subnet",
            "azurerm_virtual_network.aks_vnet",
            "module.aks.azurerm_kubernetes_cluster.this",
            "module.aks.azurerm_role_assignment.agic_app_gateway_contributor",
            "module.aks.azurerm_role_assignment.agic_network_contributor",
            "module.aks.azurerm_role_assignment.agic_resource_group_reader",
            "module.aks.data.azurerm_client_config.current",
            "random_id.prefix"
          ]
        }
      ]
    }
  ]
}